--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /.gradle/
 /build/
 
+/build.gradle
+/.gradle/7.5.1/
+/.gradle/buildOutputCleanup/
+/.gradle/vcs-1/
+/.gradle/7.5.1/checksums/
+/.gradle/7.5.1/dependencies-accessors/
+/.gradle/7.5.1/executionHistory/
+/.gradle/7.5.1/fileChanges/
+/.gradle/7.5.1/fileHashes/
