ok jusqu'ici tout va bien

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /.gradle/7.5.1/executionHistory/
 /.gradle/7.5.1/fileChanges/
 /.gradle/7.5.1/fileHashes/
+/run/logs/2023-04-14-1.log.gz
+/run/logs/2023-04-14-2.log.gz
