--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -32,6 +32,7 @@ displayURL="https://github.com/Arcthuruss/Starminer-Reborn" #optional
 #credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
 authors="Pinv and Arcthuruss" #optional
+credits="Thanks to ludo for the sprites and to the original creator of the mod."
 # Display Test controls the display for your mod in the server connection screen
 # MATCH_VERSION means that your mod will cause a red X if the versions on client and server differ. This is the default behaviour and should be what you choose if you have server and client elements to your mod.
 # IGNORE_SERVER_VERSION means that your mod will not cause a red X if it's present on the server but not on the client. This is what you should use if you're a server only mod.
